# evs

./: CMakeLists.txt  README.md  face_detector.cpp  face_detector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
